fix long link title overflow

--- a/app/assets/stylesheets/list_link.css.scss
+++ b/app/assets/stylesheets/list_link.css.scss
@@ -69,16 +69,19 @@ li {
 
   .link-title {
     padding: 3px;
+    padding-bottom: 20px;
 
     .link-author {
       font-size: 0.4em;
       padding-left: 5px;
       color: silver;
       position: absolute;
+
+
     }
   }
   .link-metadata {
-    line-height: 40px;
+    padding-top: 20px;
     font-size: 1em;
   }
 
@@ -109,6 +112,9 @@ li {
     }
     .link-author {
       font-style: normal;
+      a:hover {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -153,7 +159,7 @@ li {
 
   .link-metadata {
     @media (min-width: $screen-sm-min) {
-      display: inline;
+      display: inline-block;
     }
   }
 
